Adjested alignments across diffrent pages, solved issue with onblur in header (mobile dropdown click not working)

--- a/catalog/main.scss
+++ b/catalog/main.scss
@@ -44,7 +44,7 @@
   box-sizing: border-box;
   display: flex;
   font-family: "Vattenfall Hall NORDx", "Vattenfall Hall", sans-serif;;
-  min-height: 100vh;
+  min-height: 100%;
   line-height: 32px;
   width: 100%;
   flex-direction: column;
